<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/img_photo_detail"
        tools:layout_editor_absoluteX="-32dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_photo_bg"
                android:layout_width="417dp"
                android:layout_height="346dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="8dp"
                android:alpha="0.9"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.294"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/gifloaddetailbg"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/gif_loading"
                app:layout_constraintBottom_toBottomOf="@+id/img_photo_bg"
                app:layout_constraintEnd_toEndOf="@+id/img_photo_bg"
                app:layout_constraintStart_toStartOf="@+id/img_photo_bg"
                app:layout_constraintTop_toTopOf="@+id/img_photo_bg" />

            <ImageView
                android:id="@+id/img_photo_detail"
                android:layout_width="120dp"
                android:layout_height="180dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="@+id/img_photo_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.083"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_photo_bg" />

            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/gifloaddetail"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/gif_loading"
                app:layout_constraintBottom_toBottomOf="@+id/img_photo_detail"
                app:layout_constraintEnd_toEndOf="@+id/img_photo_detail"
                app:layout_constraintStart_toStartOf="@+id/img_photo_detail"
                app:layout_constraintTop_toTopOf="@+id/img_photo_detail" />

            <View
                android:id="@+id/divider"
                style="@style/Divider.Horizontal"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_photo_detail" />

            <!--title-->

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text="@string/content_movie_name"
                app:layout_constraintEnd_toStartOf="@+id/txt_name"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/divider"
                tools:text="@tools:sample/first_names" />

            <!--release-->

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text="@string/content_movie_year"
                app:layout_constraintEnd_toStartOf="@+id/txt_year"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_name" />

            <TextView
                android:id="@+id/txt_year"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/txt_name"
                tools:text="@tools:sample/date/day_of_week" />

            <!--rating-->

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text="@string/content_movie_rating"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/ic_star"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/txt_year" />

            <TextView
                android:id="@+id/txt_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/txt_year"
                tools:text="@tools:sample/lorem" />

            <!--description-->

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text="@string/content_movie_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/txt_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:paddingBottom="8dp"
                android:layout_weight="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                tools:text="@tools:sample/lorem/random" />

            <Button
                android:id="@+id/btnFavorite"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:paddingHorizontal="8dp"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="@+id/img_photo_detail"
                app:layout_constraintStart_toEndOf="@+id/img_photo_detail" />

            <Button
                android:id="@+id/btnShare"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:textColor="@android:color/white"
                android:background="@drawable/btn_share"
                app:layout_constraintBottom_toBottomOf="@+id/img_photo_detail"
                app:layout_constraintStart_toEndOf="@+id/btnFavorite" />

            <Button
                android:id="@+id/btnRemove"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/btn_delete"
                app:layout_constraintBottom_toBottomOf="@+id/img_photo_detail"
                app:layout_constraintStart_toEndOf="@+id/btnShare" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>